--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "npm-link-local": "^1.1.0",
     "npm-run-all": "^4.0.2",
     "onchange": "^3.2.1",
-    "remix-debug": "0.2.14",
     "remix-analyzer": "0.2.13",
+    "remix-debug": "0.2.14",
     "remix-lib": "0.3.13",
+    "remix-plugin": "0.0.1-alpha.1",
     "remix-solidity": "0.2.14",
     "remix-tests": "0.0.21",
     "remixd": "git+https://github.com/ethereum/remixd.git",
